# light_control

./: .gitignore  README.md
examples/: audio_dimmer_chase.json  controller_and_mic.json  kobe_zurka.json  mic_example.json
frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.css  main.tsx  theme.ts
frontend/src/ flowToY/: mixedStore.ts  mixedStoreDto.ts  syncUtils.ts
frontend/src/components/: BlindSwitch.tsx  GroupContextMenu.tsx  LoaderIndicator.tsx
frontend/src/crdt/: globalSync.ts  repo.ts  repo.ts.old
gRPC/: recompute_grpc_server.bash  service.proto
server/: README.md  datatypes.py  device_drivers.py  gamepad.py  graph.py  main.py  node_graph.py  node_loading.py  pyproject.toml  server.py  testing.py  utils.py
server/crdts/: client.py  crdt_server.py  dto.py  server.py
server/grpc_server/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
server/nodes/: array.py  array2D.py  array_math.py  audio.py  constructors.py  curves.py  curves2D.py  debug.py  devices.py  float_math.py  int_math.py  lights.py  logical.py  timing.py
src/: Node.py  README.md  data.py  datatypes.py  device_drivers.py  graph.py  input.py  light.py  main.py  node.py  node_loading.py  primitives.py  pyproject.toml  requirements.txt  server.py  tools.py  utils.py
src/grpc_server/: server.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
src/nodes/: array.py  array_math.py  color.py  constructors.py  curves.py  devices.py  float_math.py  lights.py  logical.py  primitive.py  primitives.py  timing.py
(+79 files in other folders)
